# BuD

./: .gitignore  .gitmodules
BuD/: BuD.sln
BuD/BuD/: BuD.vcxproj  BuD.vcxproj.filters  base_dzban.json  dupa.json  duzeee.json  dzban_torus.json  dzban_with_c0.json  dzban_with_dyngs.json  dzban_with_pokrywka.json  final_dzban.json  fiucior.json  hat.json  imgui.ini  morda.json  przyklad.json  test1.json  testowanie_cykli.json  walec.json
BuD/BuD/shaders/: bezier_curve_c0_gs.cso  bezier_curve_c0_gs.hlsl  bezier_curve_with_polygon_ps.cso  bezier_patch_c0_ds.hlsl  bezier_patch_c0_gs.hlsl  bezier_patch_c0_vs.hlsl  bezier_patch_hs.hlsl  bezier_with_polygon_ps.cso  bezier_with_polygon_ps.hlsl  f2_to_f4_no_transf_vs.hlsl  interpolated_bezier_c2_gs.hlsl  interpolated_bezier_c2_vs.hlsl  local_to_view_vs.hlsl  pos_color_cursor_ps.cso  pos_color_cursor_ps.hlsl  pos_color_cursor_vs.cso  pos_color_cursor_vs.hlsl  pos_normal_vs.cso  pos_normal_vs.hlsl  pos_transf_vs.cso  pos_transf_vs.hlsl  render_id_ps.cso  render_id_ps.hlsl  solid_color_ps.cso  solid_color_ps.hlsl  solid_light_blue_ps.hlsl  solid_white_ps.cso  two_tex_blend_ps.hlsl
BuD/BuD/src/: BuD.h  EntryPoint.cpp  EntryPoint.h
BuD/BuD/src/Algorithms/: GregoryPatchesCalculator.cpp  GregoryPatchesCalculator.h  HoleFindingAlgorithm.cpp  HoleFindingAlgorithm.h
BuD/BuD/src/Camera/: AbstractCamera.cpp  AbstractCamera.h  CameraFactory.cpp  CameraFactory.h  OrthographicCamera.cpp  OrthographicCamera.h  PerspectiveCamera.cpp  PerspectiveCamera.h  StereoscopicCamera.cpp  StereoscopicCamera.h
BuD/BuD/src/Core/: Application.cpp  Application.h  ApplicationInfo.h  ClientApp.h  GuiLayer.cpp  GuiLayer.h  InteractionMode.h  KeyboardKeys.h  MouseCode.h  Ray.h  Renderer.h  RenderingMode.h  Window.h
BuD/BuD/src/DirectX11/: DX11Device.cpp  DX11Device.h  DX11Renderer.cpp  DX11Renderer.h  DX11StereoscopicRenderer.cpp  DX11StereoscopicRenderer.h  DX11Structures.cpp  DX11Structures.h
BuD/BuD/src/Editors/: IEditable.cpp  IEditable.h
BuD/BuD/src/Event/: Event.h  EventEmitter.cpp  EventEmitter.h  EventHandler.h  IEventDispatchable.h  KeyboardEvents.cpp  KeyboardEvents.h  MouseEvents.cpp  MouseEvents.h  (+2 more)
BuD/Dependencies/ImGui/: ImGui.vcxproj  ImGui.vcxproj.filters
BuD/Dependencies/ImGuiFileDialog/: ImGuiFileDialog.vcxproj  ImGuiFileDialog.vcxproj.filters
BuD/Dependencies/Serializer/: CMakeLists.txt  Serializer.sln
BuD/Dependencies/Serializer/Sandbox/: CMakeLists.txt  Sandbox.vcxproj  dupa.json  file_example.json  file_example_2.json  main.cpp  surface_example.json
BuD/Dependencies/Serializer/Serializer/: CMakeLists.txt  Serializable.h  Serializer.h  Serializer.vcxproj  Serializer.vcxproj.filters  pch.h
BuD/Dependencies/Serializer/Serializer/Models/: Point.cpp  Point.h  PointRef.cpp  PointRef.h  SceneObject.cpp  SceneObject.h  Torus.cpp  Torus.h
BuD/Dependencies/Serializer/Serializer/Models/Curves/: Bezier.h  BezierC0.cpp  BezierC0.h  BezierC2.cpp  BezierC2.h  InterpolatedC2.cpp  InterpolatedC2.h
BuD/Dependencies/Serializer/Serializer/Models/Surfaces/: BezierPatch.h  BezierPatchC0.cpp  BezierPatchC0.h  BezierPatchC2.cpp  BezierPatchC2.h  BezierSurfaceC0.cpp  BezierSurfaceC0.h  BezierSurfaceC2.cpp  BezierSurfaceC2.h
BuD/Dependencies/Serializer/Serializer/Resources/: Schema.h
BuD/Dependencies/Serializer/Serializer/Scene/: Scene.cpp  Scene.h  SceneSerializer.cpp  SceneSerializer.h  SerializerException.h
BuD/Dependencies/Serializer/Serializer/Utils/: Float3.cpp  Float3.h  Uint2.cpp  Uint2.h
BuD/Sandbox/: Cube.cpp  Cube.h  Sandbox.vcxproj  Sandbox.vcxproj.filters  SandboxApp.cpp  SandboxApp.h  imgui.ini
BuD/Sandbox/Gui/: SceneEditor.cpp  SceneEditor.h
BuD/gmtl/: gmtl.vcxproj  gmtl.vcxproj.filters
(+127 files in other folders)
